@@ -1,3 +1,5 @@
 04/19/23    04:57PM     Can draw a 20x12 grid that fills the terminal, each tile has room for a single character.
 
             05:29PM     Can now put things in the grid without redrawing the grid!!
+
+04/20/23    02:52PM     Boards can be generated with varying numbers of bombs and be printed into the grid.
